Updated Admin UI styles and logs page

--- a/adminUI/src/components/Header/Header.scss
+++ b/adminUI/src/components/Header/Header.scss
@@ -1,6 +1,7 @@
 .header{
   // background-color: var(--gray-dark);
   background-color: #1b303b;
+  background-color: #263238;
   height: 65px;
   width: 100vw;
 
