--- a/adminUI/src/index.scss
+++ b/adminUI/src/index.scss
@@ -17,7 +17,7 @@ code {
 :root{
   --back-ground: #6b7cc9;
   --primary: #336cb6;
-  --primary-light: #4573af;
+  --primary-light: #4bb6e7;
   --primary-dark: red;
   --secondary: green;
   --onyx: #0f0f0f;
@@ -31,6 +31,7 @@ code {
 
 
   --back-ground: #BCE6FF;
+  --primary: #039be5
 
 }
 
