--- a/adminUI/src/components/Results/Results.scss
+++ b/adminUI/src/components/Results/Results.scss
@@ -12,7 +12,6 @@
 
   &__update-input-container{
     align-items: flex-end;
-    // height: 300px;
   }
 
   &__update-header{
@@ -27,5 +26,8 @@
 
   &__header{
     font-size: 2.0rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    color: #263238;
   }
 }
