--- a/adminUI/src/components/Settings/Settings.scss
+++ b/adminUI/src/components/Settings/Settings.scss
@@ -8,6 +8,7 @@
   &__header{
     font-size: 2.0rem;
     margin-bottom: 1rem;
+    color: #263238;
   }
 
   &__ranking-container{
@@ -29,5 +30,25 @@
 
   &__header{
     font-size: 2.0rem;
+  }
+
+  &__settings__container {
+    background-color: white;
+    box-sizing: border-box;
+    padding: 2rem 2rem;
+    border-radius: 8px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    margin-top: 2rem;
+  }
+
+  &__small-header {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: #263238;
+  }
+
+  &__beging-ranking-info {
+    font-size: 1rem;
   }
 }
