Added redirection for expired authentication

--- a/adminUI/src/components/Header/Header.scss
+++ b/adminUI/src/components/Header/Header.scss
@@ -62,7 +62,7 @@
     position: absolute;
     right: -16px;
     width: 140px;
-    background-color: var(--gray-dark);
+    background-color: #263238;
     height: 40px;
     padding-left: 10px;
     visibility: hidden;
