Added some unit tests for Admin UI

--- a/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
+++ b/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
@@ -46,6 +46,8 @@
       &-error {
         margin-right: 30%;
         font-size: 0.9rem;
+        color: #dd271a;
+        font-weight: 600;
       }
   
       &-icon {
