--- a/adminUI/src/components/Dialogs/Dialog/Dialog.scss
+++ b/adminUI/src/components/Dialogs/Dialog/Dialog.scss
@@ -13,4 +13,15 @@
     width: 600px;
     border-radius: 10px;
   }
+
+  &--oldScores &__content {
+    margin: 4% auto;
+
+    @media screen and (max-height: 800px) {
+      margin: 2% auto;
+    }
+  }
+
+
+  
 }
