--- a/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
+++ b/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
@@ -28,11 +28,32 @@
         border-bottom: 1px solid #efeff9;
         padding-left: 10px;
         font-size: 1.0rem;
+        position: relative;
 
         &:hover{
             cursor: pointer;
             background-color: rgb(233, 232, 232);
         }
+    }
+
+    &__row-edit-icon-container {
+      position: absolute;
+      right: 14px;
+      top: 10px
+    }
+
+    &--scores &__content-row, &--scores &__content-header-content{
+      padding-left: 70px;
+
+    }
+
+    &--logs &__content-row, &--logs &__content-header-content{
+      padding-left: 70px;
+
+    }
+
+    &--oldScores {
+      width: 1250px;
     }
 
 
