--- a/adminUI/src/components/Header/Header.scss
+++ b/adminUI/src/components/Header/Header.scss
@@ -1,5 +1,4 @@
 .header{
-  // background-color: var(--gray-dark);
   background-color: #1b303b;
   background-color: #263238;
   height: 65px;
@@ -10,17 +9,32 @@
     font-size: 1.4rem;
     font-weight: bold;
     height: 60%;
-    //border-bottom: 1px solid red;
+
+    @media screen and (max-width: 1000px) {
+      font-size: 1rem;
+    }
 
     &:nth-child(2){
       margin: 0 4rem;
+
+      @media screen and (max-width: 1000px) {
+        margin: 0 3rem;
+      }
     }
     &:nth-child(4){
       margin-left: 4rem;
+
+      @media screen and (max-width: 1000px) {
+        margin-left: 0 3rem;
+      }
     }
 
     &:nth-child(5){
       margin-left: 4rem;
+
+      @media screen and (max-width: 1000px) {
+        margin-left: 0 3rem;
+      }
     }
 
     &:hover{
