--- a/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
+++ b/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
@@ -1,6 +1,10 @@
 .table{
     width: 1000px;
 
+    @media screen and (max-width: 900px) {
+      width: 90vw;
+    }
+
     &__content-header{
         background-color: var(--primary);
         
@@ -11,6 +15,10 @@
           text-align: left;
           padding: 1rem 0;
           padding-left: 10px;
+
+          @media screen and (max-width: 900px) {
+            font-size: 1.2rem;
+          }
     
           &:first-child{
             border-radius:5px 0 0 0;
@@ -54,6 +62,10 @@
 
     &--oldScores {
       width: 1250px;
+
+      @media screen and (max-width: 900px) {
+        width: 95vw;
+      }
     }
 
 
