Input validation and keyboard navigation to Admin UI

--- a/adminUI/src/components/Dialogs/ModifyDialog/ModifyDialog.scss
+++ b/adminUI/src/components/Dialogs/ModifyDialog/ModifyDialog.scss
@@ -32,5 +32,14 @@
     &:hover {
       cursor: pointer;
     }
+  } 
+
+  &__input {
+    width: 300px;
+    margin: 0.6rem 0 !important;
+  }
+
+  &__close-button {
+    background-color: var(--gray);
   }
 }
