--- a/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
+++ b/adminUI/src/components/TableWithPaginator/TableWithPaginator.scss
@@ -7,6 +7,8 @@
 
     &__content-header{
         background-color: var(--primary);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
         
         &-content {
           color: white;
@@ -18,14 +20,6 @@
 
           @media screen and (max-width: 900px) {
             font-size: 1.2rem;
-          }
-    
-          &:first-child{
-            border-radius:5px 0 0 0;
-          }
-    
-          &:last-child{
-            border-radius:0 5px 0 0 ;
           }
         }
     }
@@ -39,8 +33,8 @@
         position: relative;
 
         &:hover{
-            cursor: pointer;
-            background-color: rgb(233, 232, 232);
+          cursor: pointer;
+          background-color: rgb(233, 232, 232);
         }
     }
 
